<resources>
    <string name="app_name">Si2G Assistant</string>

    <!-- Navigation Menu -->
    <string name="bottom_navigation_option_1">About</string>
    <string name="bottom_navigation_option_2">Me</string>
    <string name="bottom_navigation_option_3">Add Actor</string>
    <string name="bottom_navigation_option_4">Actors</string>
    <string name="bottom_navigation_option_5">Report Issue</string>
    <string name="bottom_navigation_option_6">All Issues</string>
    <string name="bottom_navigation_option_7">Academies</string>
    <string name="bottom_navigation_option_8">Overview</string>

    <!-- Academies Fragment -->
    <string name="fragment_academies_results"><b>%1$s Academies</b></string>
    <string name="fragment_academies_results_hint"><b>0 Academies</b></string>
    <string name="fragment_academies_quick_search_hint"><i>ex: location, number</i></string>
    <string name="fragment_academies_alphabetic_sort_button_description">Alphabetic sorting button</string>
    <string name="fragment_academies_numeric_sort_button_description">Numeric sorting button</string>

    <!-- Actors Fragment -->
    <string name="fragment_actors_current_academy_hint"><b>Academy</b></string>
    <string name="fragment_actors_results"><b>%1$s Actors</b></string>
    <string name="fragment_actors_results_hint"><b>0 Actors</b></string>
    <string name="fragment_actors_quick_search_hint"><i>ex: firstname, name, role</i></string>
    <string name="fragment_actors_alphabetic_sort_button_description">Alphabetic sorting button</string>

    <!-- Modules Fragment -->
    <string name="fragment_modules_current_academy_hint"><b>Academy</b></string>
    <string name="fragment_modules_results"><b>%1$s Modules</b></string>
    <string name="fragment_modules_results_hint"><b>0 Modules</b></string>
    <string name="fragment_modules_full_name">%1$s %2$s</string>
    <string name="fragment_modules_full_name_hint">Firstname Name</string>

    <!-- Hexagonal icons descriptions -->
    <string name="academy_hexagonal_description">Academy hexagonal icon</string>
    <string name="academy_hexagonal_variant_description">Academy hexagonal variant icon</string>
    <string name="actor_hexagonal_description">Actor hexagonal icon</string>
    <string name="actor_hexagonal_variant_description">Actor hexagonal variant icon</string>
    <string name="module_hexagonal_description">Module hexagonal icon</string>
    <string name="module_hexagonal_variant_description">Module hexagonal variant icon</string>
    <string name="close_hexagonal_description">Close hexagonal icon</string>
    <string name="check_hexagonal_description">Check hexagonal icon</string>
    <string name="module_hexagonal_close_description">Module close hexagonal icon</string>
    <string name="module_hexagonal_check_description">Module check hexagonal icon</string>
    <string name="issue_hexagonal_variant_description">Issue hexagonal variant icon</string>
    <string name="add_actor_hexagonal_variant_description">Add actor hexagonal variant icon</string>
    <string name="report_issue_hexagonal_variant_description">Report issue hexagonal variant icon</string>

    <!-- Login Fragment -->
    <string name="fragment_login_button_hint">LOGIN</string>

    <!-- User Fragment -->
    <string name="fragment_user_date_hint">Day Month YYYY</string>
    <string name="fragment_user_date">%s, %s %s %s</string>
    <string name="fragment_user_greetings_hint"><i>Welcome</i>, \n <b>Name</b> <b>Firstname</b></string>
    <string name="fragment_user_greetings"><i>Welcome</i>, \n <b>%s</b> <b>%s</b></string>
    <string name="fragment_user_academy_hint">Academy</string>
    <string name="fragment_user_button_hint">LOGOUT</string>

    <!-- Add actor Fragment -->
    <string name="fragment_add_actor_title_hint"><b>Add Actor</b></string>
    <string name="fragment_add_actor_name_hint">Name</string>
    <string name="fragment_add_actor_firstname_hint">Firstname</string>
    <string name="fragment_add_actor_role_hint">Role</string>
    <string name="fragment_add_actor_academy_hint">Academy</string>

    <string name="fragment_add_actor_upload_status_hint">Upload status</string>
    <string name="fragment_add_actor_upload_ready_hint">Ready or not</string>
    <string name="fragment_add_actor_upload_ready_negative">Missing elements</string>
    <string name="fragment_add_actor_upload_ready_positive">Ready to upload</string>
    <string name="fragment_add_actor_upload_awaiting_hint">Awaiting</string>
    <string name="fragment_add_actor_upload_uploading">Uploading…</string>
    <string name="fragment_add_actor_upload_successful">Actor successfully pushed</string>
    <string name="fragment_add_actor_upload_failed">Error… something went wrong</string>
    <string name="fragment_add_actor_update_description">Update button</string>
    <string name="fragment_add_actor_select_role_description">Update button</string>

    <!-- Modules Fragment -->
    <string name="fragment_modules_actor_academy_hint">Academy</string>
    <string name="fragment_modules_actor_name_hint">Name</string>
    <string name="fragment_modules_actor_firstname_hint">Firstname</string>

    <!-- Report Issue Fragment -->
    <string name="fragment_report_issue_title_hint"><b>Report Issue</b></string>
    <string name="fragment_report_issue_description_hint">Describe your issue</string>
    <string name="fragment_report_issue_select_category_hint"><b>Select a category</b></string>
    <string name="fragment_report_issue_button_hint">Upload status</string>
    <string name="fragment_report_issue_ready">Ready to report</string>
    <string name="fragment_report_issue_not_ready">Missing elements</string>
    <string name="fragment_report_issue_academy_hint">Academy</string>
    <string name="fragment_report_issue_gravity_hint">Gravity</string>
    <string name="fragment_report_issue_select_category_description">Select category button</string>
    <string name="fragment_report_issue_update_description">Update button</string>

    <!-- Issues Fragment -->
    <string name="fragment_issues_results"><b>%1$s Issues</b></string>
    <string name="fragment_issues_results_hint"><b>0 Issues</b></string>
    <string name="fragment_issues_solved_issue_description">Sort solved issues button</string>
    <string name="fragment_issues_not_solved_description">Sort unsolved issues button</string>
    <string name="fragment_issues_weak_description">Sort weak issues button</string>
    <string name="fragment_issues_moderate_description">Sort moderate issues button</string>
    <string name="fragment_issues_critical_description">Sort critical issues button</string>
    <string name="fragment_issues_date_description">Sort issues by date button</string>
    <string name="fragment_issues_date_hint"><b>00.00.0000</b></string>

    <!-- Issue Fragment -->
    <string name="fragment_issue_location_hint"><b>Location</b></string>
    <string name="fragment_issue_date_hint"><b>00.00.0000</b></string>
    <string name="fragment_issue_category_hint">Category</string>
    <string name="fragment_issue_description_hint">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!-- Actor item -->
    <string name="item_actor_role_hint">Role</string>
    <string name="item_actor_full_name">%1$s, %2$s</string>
    <string name="item_actor_full_name_hint">Firstname Name</string>

    <!-- Issue item -->
    <string name="item_issue_academy_location_hint"><b>Location</b></string>
    <string name="item_issue_category_hint">Category</string>
    <string name="item_issue_id"># %s</string>
    <string name="item_issue_date">%s.%s.%s</string>
    <string name="item_issue_gravity_description">Circles gravity icon</string>

    <!-- Academy item -->
    <string name="item_academy_id_hint">#000</string>
    <string name="item_academy_hexagonal_logo_description">Academy hexagonal logo</string>
    <string name="item_academy_name_hint">Academy</string>

    <!-- Module item -->
    <string name="item_module_id_hint"># N</string>

    <!-- ImageView descriptions -->
    <string name="logo_description">Logo</string>
    <string name="login_decoration">Decoration</string>
    <string name="login_button_description">Login</string>
    <string name="logout_button_description">Logout</string>
    <string name="module_document_description">Document</string>
    <string name="item_decoration">Decoration</string>
    <string name="item_actor_academy">Academy icon</string>

    <!-- AlertDialog -->
    <string name="alert_login_title">Welcome</string>
    <string name="alert_login_message">Do you wish to login?</string>
    <string name="alert_login_mail_hint">Mail</string>
    <string name="alert_login_password_hint">Password</string>
    <string name="alert_logout_title">Confirm</string>
    <string name="alert_logout_message">Do you wish to logout?</string>
    <string name="alert_role_title">Select a role</string>
    <string name="alert_category_title">Select a category</string>
    <string name="alert_add_actor_title">Add this actor?</string>
    <string name="alert_report_issue_title">Report this issue?</string>
    <string name="alert_report_issue_academy_hint">Academy</string>
    <string name="alert_report_issue_category_hint">Category</string>
    <string name="alert_report_issue_gravity_hint">Gravity</string>
    <string name="alert_report_issue_description_hint">Description</string>
    <string name="alert_report_issue_update_title">Update Issue</string>
    <string name="alert_report_issue_update_message">Do you wish to set this Issue as RESOLVED?</string>
    <string name="alert_add_actor_update_title">Update Actor</string>

    <string name="alert_module_update_title">Module %s</string>
    <string name="alert_module_update_check_message">"Are you sure you wish to 「VALIDATE」 this module?"</string>
    <string name="alert_module_update_uncheck_message">"Are you sure you wish to 「INVALIDATE」 this module?"</string>

    <string name="alert_negative">No</string>
    <string name="alert_neutral">OK</string>
    <string name="alert_positive">Yes</string>

    <!-- Gravity levels -->
    <string name="gravity_level_1">Level 1… Weak </string>
    <string name="gravity_level_2">Level 2… Moderate</string>
    <string name="gravity_level_3">Level 3… Critical</string>

    <!-- Picture description -->
    <string name="corner_hexagonal_grid">Background grid</string>

    <!-- Roles array -->
    <array name="roles_array">
        <item>Chef d\'établissement support</item>
        <item>Directeur opérationnel</item>
        <item>Assistance administrative</item>
        <item>Conseiller en formation continue</item>
        <item>Assistant commercial</item>
        <item>Coordonnateur</item>
        <item>Assistant de coordination</item>
        <item>Formateur</item>
    </array>

    <!-- Categories array -->
    <array name="categories_array">
        <item>Interface</item>
        <item>Typography</item>
        <item>Miscellaneous</item>
    </array>


</resources>