<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="navigationViewModel"
            type="com.oxymium.si2gassistant.navigation.NavigationViewModel"/>
        <variable
            name="reportIssueViewModel"
            type="com.oxymium.si2gassistant.features.reportissue.ReportIssueViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

        <TextView
            android:id="@+id/dialog_report_issue_academy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{reportIssueViewModel.academy.fullTitle}"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:hint="@string/alert_report_issue_academy_hint"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dialog_report_issue_gravity"
            />

        <TextView
            android:id="@+id/dialog_report_issue_gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{reportIssueViewModel.gravity.toString()}"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:hint="@string/alert_report_issue_gravity_hint"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_report_issue_academy"
            app:layout_constraintBottom_toTopOf="@id/dialog_report_issue_category"
            />

        <TextView
            android:id="@+id/dialog_report_issue_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{reportIssueViewModel.category}"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:hint="@string/alert_report_issue_category_hint"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_report_issue_gravity"
            app:layout_constraintBottom_toTopOf="@id/dialog_report_issue_description"
            />

        <TextView
            android:id="@+id/dialog_report_issue_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{reportIssueViewModel.description}"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:hint="@string/alert_report_issue_description_hint"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_report_issue_category"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
